--- a/client/index.html
+++ b/client/index.html
@@ -339,6 +339,11 @@
             <form>
                 <header>
                     <div class="micro-ol-handle listling-item-mode-view"></div>
+
+                    <button class="listling-item-check listling-item-mode-view">
+                        <i class="fa fa-square-o"></i>
+                    </button>
+
                     <h1>
                         <span class="listling-item-mode-view"></span>
                         <label class="listling-item-mode-edit"><input name="title" placeholder="Title" /></label>
